--- a/public/modules/folders/views/foldersView.html
+++ b/public/modules/folders/views/foldersView.html
@@ -11,7 +11,8 @@
 							<!--<img ng-src="{{result.url}}" class="img-responsive" alt="">-->
 							<img ng-src="http://oi57.tinypic.com/2mrrx94.jpg" class="img-responsive" alt="">
 						</a>
-						<p style="text-align:center;">{{result.name}}: <span class="badge">{{result.numPhotos}}</span></p>
+						<p style="text-align:center;">{{result.name}} <span class="badge">{{result.numPhotos}}</span></p>
+						<!--TODO: make result.numphotos by using the professor's :listId/count to get the count for each-->
 					</div>
 				</td>
 			</tr>
