--- a/public/modules/photos/tags/views/addTags.html
+++ b/public/modules/photos/tags/views/addTags.html
@@ -8,7 +8,8 @@
 				<td style="width:70%">
 				<div>
 					<div class="col-lg-3 col-md-4 col-xs-6 thumb" ng-repeat = 'result in results'>
-					<input type="checkbox" name="{{result.name}}" value="{{result.name}}" id="{{result.name}}" ng-model="selectedPhoto.name">
+					<input type="checkbox" name="{{result.name}}" value="{{result.name}}" id="{{result.location}}" ng-model="selectedPhoto.name">
+					<!-- What does ng-model="selectedPhoto.name" do? -->
 					<a class="thumbnail" href="#">
 					
 					<img class="img-responsive" ng-src="{{result.location}}" alt="">
@@ -29,14 +30,8 @@
 					<span>{{tagResult.name}}</span>
 					</div>
 					<br></br>
-					
-					<input type="text" name="newTag" ng-model="tag.name" placeholder="New tag name" >
-					<span><input type = "button" ng-click='writeTag()'onclick ="history.go(0)" value = "+"</span>
-					</p>
-					
-					<!--<input type="text" name="newTag" ng-model="tag.name" placeholder="New tag name" ></p>
-					<span><input type = "button" ng-click= 'writeTag()'onclick ="history.go(0)" value = "Create tag"</span>-->
-					<span><input type = "button" ng-click='updateTag()' href="#/folders" value="Add tags to photos"</span>
+					<input type="text" name="newTag" ng-model="tag.name" placeholder="New tag name" ></p>
+					<span><input type = "button" ng-click= 'writeTag()'onclick ="history.go(0)" value = "Add a new tag"</span>
 					<!--<span><input type = "button" ng-click= 'updateTag()' value = "Add tags to photos"</span>-->
 					</div>
 				</form>
@@ -44,7 +39,7 @@
 				<br></br>
 				<br></br>
 				<br></br>
-				<!--<a class="btn btn-lg btn-primary" ng-click='updateTag()' href="#/addtags" role="button">Add Tags</a>-->
+				<a class="btn btn-lg btn-primary" ng-click='updateTag()' href="#/folders" role="button">Add Tags</a>
 				
 			</td>
 		</table>
