--- a/public/modules/photos/tags/views/addTags.html
+++ b/public/modules/photos/tags/views/addTags.html
@@ -30,8 +30,11 @@
 					<span>{{tagResult.name}}</span>
 					</div>
 					<br></br>
-					<input type="text" name="newTag" ng-model="tag.name" placeholder="New tag name" ></p>
-					<span><input type = "button" ng-click= 'writeTag()'onclick ="history.go(0)" value = "Add a new tag"</span>
+					<input type="text" name="newTag" ng-model="tag.name" placeholder="New tag name" >
+					<span><input type = "button" ng-click='writeTag()'onclick ="history.go(0)" value = "+"</span>
+					</p>
+					<span><input type = "button" ng-click='updateTag()' href="#/folders" value = "Add tags to photos"</span>
+					
 					<!--<span><input type = "button" ng-click= 'updateTag()' value = "Add tags to photos"</span>-->
 					</div>
 				</form>
@@ -39,7 +42,7 @@
 				<br></br>
 				<br></br>
 				<br></br>
-				<a class="btn btn-lg btn-primary" ng-click='updateTag()' href="#/folders" role="button">Add Tags</a>
+				<!--<a class="btn btn-lg btn-primary" ng-click='updateTag()' href="#/folders" role="button">Add Tags</a>-->
 				
 			</td>
 		</table>
