--- a/public/modules/photos/tags/views/addTags.html
+++ b/public/modules/photos/tags/views/addTags.html
@@ -33,11 +33,11 @@
 					<input type="text" name="newTag" ng-model="tag.name" placeholder="New tag name" >
 					<span><input type = "button" ng-click='writeTag()'onclick ="history.go(0)" value = "+"</span>
 					</p>
-					<span><input type = "button" ng-click='updateTag()' href="#/folders" onclick="#/folders" value = "Add tags to photos"</span>
 					
 					<!--<span><input type = "button" ng-click= 'updateTag()' value = "Add tags to photos"</span>-->
 					</div>
 				</form>
+				<span><input type = "button" ng-click='updateTag()' href="#/folders" value = "Add tags to photos"</span>
 				
 				<br></br>
 				<br></br>
