--- a/public/modules/photos/tags/views/addTags.html
+++ b/public/modules/photos/tags/views/addTags.html
@@ -37,7 +37,7 @@
 					<!--<span><input type = "button" ng-click= 'updateTag()' value = "Add tags to photos"</span>-->
 					</div>
 				</form>
-				<span><input type = "button" ng-click='updateTag()' href="#/folders" value = "Add tags to photos"</span>
+				<span><input type = "button" ng-click='updateTag()' href="#/folders" role="button" value="Add tags to photos"</span>
 				
 				<br></br>
 				<br></br>
