--- a/public/modules/photos/tags/views/addTags.html
+++ b/public/modules/photos/tags/views/addTags.html
@@ -24,7 +24,7 @@
 				<hr>
 				<form action="">
 					<div>
-					<h3 class="panel-heading">Active Lists</h3>
+					<h3 class="panel-heading">Tags</h3>
 					<div ng-repeat = 'tagResult in tagLists'>
 					<input type="checkbox" name="{{tagResult.name}}" value="{{tagResult.name}}" id="{{tagResult.name}}">
 					<span>{{tagResult.name}}</span>
@@ -37,12 +37,12 @@
 					<!--<span><input type = "button" ng-click= 'updateTag()' value = "Add tags to photos"</span>-->
 					</div>
 				</form>
-				<span><input type = "button" ng-click='updateTag()' href="#/folders" role="button" value="Add tags to photos"</span>
+				<!--<span><input type = "button" ng-click='updateTag()' href="#/folders" role="button" value="Add tags to photos"</span>-->
 				
 				<br></br>
 				<br></br>
 				<br></br>
-				<!--<a class="btn btn-lg btn-primary" ng-click='updateTag()' href="#/folders" role="button">Add Tags</a>-->
+				<a class="btn btn-lg btn-primary" ng-click='updateTag()' href="#/folders" role="button">Add tags to photos</a>
 				
 			</td>
 		</table>
