--- a/public/modules/photos/tags/views/addTags.html
+++ b/public/modules/photos/tags/views/addTags.html
@@ -24,7 +24,7 @@
 				<hr>
 				<form action="">
 					<div>
-					<h3 class="panel-heading">Tags</h3>
+					<!--<h3 class="panel-heading">Tags</h3>-->
 					<div ng-repeat = 'tagResult in tagLists'>
 					<input type="checkbox" name="{{tagResult.name}}" value="{{tagResult.name}}" id="{{tagResult.name}}">
 					<span>{{tagResult.name}}</span>
