--- a/public/modules/folders/views/foldersView.html
+++ b/public/modules/folders/views/foldersView.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default"  ng-controller='foldersCtrl' ng-init='getFolders()'>
 	<!-- Default panel contents -->
 	<div class="panel-heading"> 
-		<td align="left"><h2>Welcome, Jason!</h2></td>
+		<td align="left"><h2>Welcome, {{user}}!</h2></td>
 		<br></br>
 		<table>
 			<tr>
