--- a/public/modules/core/views/welcome.html
+++ b/public/modules/core/views/welcome.html
@@ -12,7 +12,7 @@
 	<br></br>
 			
 	<p>
-	  <a class="btn btn-lg btn-primary" href="/#/login" role="button">Log In</a>
+	  <a class="btn btn-lg btn-primary" role="button" ng-click="toLogin()">Log In</a>
 	  <a class="btn btn-lg btn-primary" href="/#/login" role="button">Sign Up</a>
 	</p>
 </div>
