--- a/public/modules/photos/views/photosView.html
+++ b/public/modules/photos/views/photosView.html
@@ -1,14 +1,14 @@
 <div class="panel panel-default" ng-controller='photosCtrl' ng-init='getPhotos()'>
 	<!-- Default panel contents -->
 	<div class="panel-heading"> 
-		<td align="left"><h2><a href="/#/folders">Jason's Photos</a> -> {{tag}}</h2></td>
+		<td align="left"><h2><a href="/#/folders">{{user}}'s Photos</a> -> {{tag}}</h2></td>
 		<!--If refreshed, {{listName}} does not work-->
 		<br></br>
 		<table>
 			<tr>
 				<td>
 					<div class="col-lg-3 col-md-4 col-xs-6 thumb" ng-repeat='result in results'>
-						<a class="thumbnail" href="#">
+						<a class="thumbnail" href="#/photos/{{tag}}/{{result.id}}">
 							<img ng-src="{{result.location}}" class="img-responsive" alt="">
 						</a>
 					</div>
